Changelog
=========

1.6 - Unreleased
----------------

* Added support for Concurrent Versions System (CVS).
  [sargo]

1.5 - 2009-11-19
----------------

* Added global ``always-checkout`` and a per source ``update`` option.
  [fschulze]

* Added ``purge`` command.
  [fschulze]

* Ask user how to proceed when package is dirty.
  [fschulze]

* Refactored package matching and made the command options consistent.
  Now you can update only the packages currently in development with ``-d``
  and similar possibilities.
  [fschulze]

* Fix duplicate logging output.
  [fschulze]

* Fix parsing of buildout arguments when ``-t`` was used.
  [fschulze]

1.4 - 2009-11-16
----------------

* Allow to set a minimal revision for ``svn`` repositories. If the current
  revision is lower, then the package is updated.
  [fschulze]

1.3 - 2009-11-15
----------------

* Read the cfg used by last buildout run. This prevents unexpected behaviour,
  if you change mr.developer options like source declarations and don't run
  buildout. Such changes are now picked up immediately.
  [fschulze]

* Added tests and a buildout to run them easily.
  [fschulze]

1.2 - 2009-11-12
----------------

* If a package is removed from ``auto-checkout`` and wasn't explicitly
  activated, then it will be removed from the develop packages automatically.
  In existing buildouts with an older mr.developer, you have to ``reset`` the
  packages first.
  [fschulze]

* Added ``*`` wild card support for ``auto-checkout``.
  [fschulze]

* Don't bail on subversion URLs ending in a slash or a revision marker.
  [fschulze]

* Removed old way of specifying sources with ``sources-svn`` and
  ``sources-git``.
  [fschulze]

* Exit immediately when there are issues during checkout when running as
  extension.
  [fschulze]

* Use verbosity from buildout when running as extension.
  [fschulze]

* Fix buildout_dir in ``develop`` script, so it is properly escaped on
  Windows.
  [fschulze]
